// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter>
        <Header
          width={750}
        />
      </Gutter>
    }
    initialListSize={10}
    initialNumToRender={10}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    pageSize={1}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    scrollRenderAheadDistance={10}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <View>
            <Text
              selectable={true}
            >
              T
            </Text>
          </View>
          <View>
            <View>
              <Text
                selectable={true}
              >
                his being Black History Month, 
              </Text>
              <Text
                selectable={true}
              >
                last week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <InteractiveWrapper
              id="d2f83305-d558-4f78-f582-32115c659355"
            />
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "An image caption",
                  "credits": "The image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "primary",
                  "ratio": "1500:1000",
                  "uri": "https://image.io",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "A secondary image caption",
                  "credits": "The secondary image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "secondary",
                  "ratio": "1500:1000",
                  "uri": "https://image.io/secondary",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "An inline image caption",
                  "credits": "The inline image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "secondary",
                  "ratio": "1500:1000",
                  "uri": "https://image.io/inline",
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <View>
              <Text
                selectable={true}
              >
                <Text
                  selectable={true}
                >
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <Ad
            contextUrl="https://url.io"
            section="Some Section"
            slotName="native-inline-ad"
          />
        </View>
      </View>
      <View>
        <View>
          <View>
            <PullQuote
              caption="AName"
              quoteColour="#FF0000"
              text="a text"
              twitter="@AName"
            >
              The pull quote content
            </PullQuote>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <Video
              accountId="57838016001"
              height={421.875}
              policyKey="1.2.3.4"
              poster={
                Object {
                  "uri": "https://image.io",
                }
              }
              skySports={false}
              videoId="4084164751001"
              width={750}
            />
            <View>
              <View>
                <Text>
                  This is video caption
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <View>
              <Text>
                EXAMPLE TITLE
              </Text>
              <View>
                <View>
                  <View />
                  <Text>
                    Example bullet text
                  </Text>
                </View>
                <View>
                  <View />
                  <Text>
                    An example 
                    <Text
                      accessibilityRole="link"
                    >
                      link
                    </Text>
                  </Text>
                </View>
                <View>
                  <View />
                  <Text>
                    More example text.
                  </Text>
                </View>
                <View>
                  <View />
                  <Text>
                    Example text 
                    <Text>
                      this is bold 
                    </Text>
                    <Text>
                      this is in italics.
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with no content 1`] = `
<View>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter>
        <Header
          width={750}
        />
      </Gutter>
    }
    initialListSize={10}
    initialNumToRender={10}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    pageSize={1}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    scrollRenderAheadDistance={10}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View>
        <View />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with a nested markup in first paragraph displays no drop cap 1`] = `
<View>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter>
        <Header
          width={750}
        />
      </Gutter>
    }
    initialListSize={10}
    initialNumToRender={10}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    pageSize={1}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    scrollRenderAheadDistance={10}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <View>
            <View>
              <Text
                selectable={true}
              >
                <Text
                  selectable={true}
                >
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <ArticleExtras
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`5. an inline link reports analytics event on press 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleId": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
    "bylines": "Some byline",
    "eventTime": "2018-01-01T00:00:00.000Z",
    "headline": "Some Headline",
    "label": "Some Label",
    "linkType": "",
    "linkUrl": "https://link.io",
    "pageName": "this-is-slug-2k629tpvh",
    "publishedTime": "2015-03-13T18:54:58.000Z",
    "referralUrl": "",
    "section": "Some Section",
    "template": "mainstandard",
  },
  "component": "ArticleLink",
  "object": "Article",
}
`;
